<resources>
    <string name="app_name">Inspense</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="databasename">inspense.sqlite3</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="account">Account</string>
    <string name="add_income">Add Income</string>
    <string name="add_expense">Add Expense</string>
    <string name="title_activity_addincome">Addincome</string>
    <string name="date">date</string>
    <string name="title_income">Income. Base account name: </string>
    <string name="title_expense">Expense. Base account name: </string>
    <string name="account_name">Account Name:</string>
    <string name="amount">Amount</string>
    <string name="title_activity_changebaseaccount">ChangebaseaccountActivity</string>
    <string name="base_account">Base Account:</string>
    <string name="change_base_account">Change base account</string>
    <string name="edit_account">Edit account</string>
    <string name="new_account">Create new base account</string>
    <string name="create">Create</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="summary">Summary:</string>
    <string name="balance">Balance</string>
    <string name="last_balance">Last Period Balance</string>
    <string name="total_income">Total Income</string>
    <string name="total_expense">Total Expense</string>
    <string name="total_transfer_income">Total Transfer Income</string>
    <string name="total_transfer_expense">Total Transfer Expense</string>
    <string name="title_activity_addexpense">Add Expense</string>
    <string name="title_activity_debug">Database Query</string>
    <string name="title_activity_editexpense">Expenses</string>
    <string name="description">Description</string>
    <string name="title_activity_editincome">EditincomeActivity</string>


    <string name="banner_ad_unit_id_asli">ca-app-pub-1378858279576731/7879318403</string>
    <string name="banner_ad_unit_id_used">ca-app-pub-1378858279576731/7879318403</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id_tes">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id_full">ca-app-pub-1378858279576731/4042718002</string>

    <string name="title_activity_account">AccountActivity</string>

    <color name="bgAccountEditDark">#11000000</color>
    <string name="title_activity_accountmanipulate">AccountmanipulateActivity</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="december">December</string>
</resources>
