<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="0dp"
    tools:context="in.izzulmak.inspense.AddexpenseActivity"
    android:background="#ffffffff">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:background="#ffffffff">
        <TextView android:text="@string/title_expense" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_Addexpense_Accountname"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_Addexpense_IdEdit"
            android:text=""
            android:visibility="visible"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_Addexpense_ExpenseAccountIdEdit"
            android:text=""
            android:visibility="visible"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textOff="Normal Expense"
            android:textOn="Transfer Expense"
            android:showText="true"
            android:onClick="toggleExpense"
            android:id="@+id/sw_Addexpense_Switch"
            android:layout_gravity="center_horizontal" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:id="@+id/tv_Addexpense_Amount"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Make it to this value"
                android:id="@+id/bt_Addexpense_AmountMakeItTo"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:onClick="makeItTo"/>

        </LinearLayout>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/et_Addexpense_Amount"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:id="@+id/tv_Addexpense_Account"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/bt_Addexpense_Account"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:background="#ffeeeeee"
            android:textColor="#ff000000"
            android:visibility="visible"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/bt_Addexpense_AccountTrans"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:background="#ffeeeeee"
            android:textColor="#ff000000"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:id="@+id/tv_Addexpense_Date" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Pick Date"
            android:id="@+id/bt_Addexpense_Date_Pick"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:background="#ffeeeeee"
            android:textColor="#ff000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_Addexpense_Description"/>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save"
                android:id="@+id/bt_Addexpense_Save"
                android:layout_gravity="center"
                android:onClick="saveData"
                />
        </FrameLayout>
        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="56dp">

        </FrameLayout>

    </LinearLayout></ScrollView>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id_used">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
